<resources>
    <string name="app_name">Airflite Project - Get RESTFul</string>

    <!-- Category name for the first meal type [CHAR LIMIT=20] -->
    <string name="category_json_get">Json GET device list</string>
    <string name="category_json_get_device">Json GET device</string>
    <string name="category_json_post">Json POST new device</string>
    <string name="category_json_put">Json UPDATE device (tagid)</string>
    <string name="category_json_delete">Json DELETE device (tagid)</string>

    <!-- Device item -->
    <string name="device_id">ID: </string>
    <string name="device_name">Name: </string>
    <string name="device_serial_no">Serial No.: </string>
    <string name="device_activate_date">Activate Date: </string>
    <string name="device_user_id">User ID: </string>
    <string name="device_com_id">Com ID: </string>
    <string name="device_model">Model: </string>
    <string name="device_tag_id">Tag ID: </string>


</resources>
